klipper: fix mimeData ownership

In SystemClipboard::setMimeData, setMimeData must not share mimeData
with other setMimeData calls because setMimeData takes ownership.

BUG: 489316
FIXED-IN: 6.2